[package]
name = "kaleidoscope"
version = "0.1.0"
authors = ["Suguru Kato <salmon.bioinformatics@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = "90"
# llvm-sys = { version = "90", path = "../llvm-sys.rs" }

